fix: unexpected img gap space

--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -74,6 +74,9 @@
     margin-left: -8px;
     margin-right: -8px;
   }
+  .inspiration-me-md-8 {
+    margin-right: 8px;
+  }
   .inspiration-col-md {
     padding-left: 8px;
     padding-right: 8px;
